--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 # Folders
 _obj
 _test
-vendor/
+# vendor/ - vendoring enabled for Docker builds
 
 # Architecture specific extensions/prefixes
 *.[568vq]
